Fixed spacing

--- a/volunteer.css
+++ b/volunteer.css
@@ -67,7 +67,7 @@ html {
     .titleAlt {
         font-size: 80px;
         position: absolute;
-        top: 50%;
+        top: 48%;
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
@@ -77,7 +77,7 @@ html {
     .sectionAlt > h6 {
         font-size: 16px;
         position: absolute;
-        top: 60%;
+        top: 62%;
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
@@ -143,7 +143,7 @@ html {
     }
 
     .titleAlt {
-        font-size: 80px;
+        font-size: 60px;
         position: absolute;
         top: 40%;
         left: 50%;
@@ -155,7 +155,17 @@ html {
     .sectionAlt > h6 {
         font-size: 16px;
         position: absolute;
-        top: 52%;
+        top: 53%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: #009dab;
+    }
+
+    #sectionContact {
+        font-size: 16px;
+        position: absolute;
+        top: 56%;
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
